--- a/style.css
+++ b/style.css
@@ -1936,10 +1936,9 @@ button, input[type="button"], input[type="reset"], input[type="submit"], .button
   padding: 0;
   margin: 0; }
   .comment-list li li {
-    margin-right: -20px; }
+    margin-right: -30px; }
   .comment-list li {
-    margin-top: 20px;
-    padding: 20px; }
+    padding: 30px; }
   .comment-list > .comment {
     padding: 0; }
   .comment-list .comment {
@@ -1950,11 +1949,13 @@ button, input[type="button"], input[type="reset"], input[type="submit"], .button
       background: #FFFFFF;
       border-bottom: 2px solid #edeeee;
       font-size: 16px; }
-  .comment-list .children {
-    padding-bottom: 30px; }
-    .comment-list .children li {
-      margin-top: 0;
-      padding-bottom: 0; }
+  .comment-list .children li {
+    margin-top: 0;
+    padding-bottom: 0; }
+  .comment-list .children article {
+    border-left: 6px solid #edeeee; }
+  .comment-list .children:last-child {
+    margin-bottom: 60px; }
 
 .comment-header {
   position: relative; }
